# eagle_tools

./: .gitignore  Eagle_extractor.ipynb  README.md  params.toml  pyproject.toml  requirements.txt
tests/: run.ipynb  upscaling.py  upscaling_batch.py
tests/captioning/: llama_vision.ipynb
tests/upscaling/: run.ipynb  upscaling.py  upscaling_batch.py
util/: LLM_API.py  README.md  process_image_API.py
utils/: LLM_API.py  README.md  caption_utils.py  color_utils.py  config.py  folder_utils.py  image_utils.py  io_utils.py  process_image_API.py  upscale_API.py
