[project]
name = "eagle-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cairosvg>=2.7.1",
    "ipykernel>=6.29.5",
    "numpy>=2.1.1",
    "opencv-python>=4.10.0.84",
    "pillow>=10.4.0",
    "spandrel>=0.4.0",
    "spandrel-extra-arches>=0.2.0",
    "toml>=0.10.2",
    "torch>=2.4.1",
    "tqdm>=4.66.5",
    "transformers>=4.45.0",
]
